--- a/src/styles/pages/css/Topbar.css
+++ b/src/styles/pages/css/Topbar.css
@@ -52,4 +52,4 @@
 }
 .TopBar .Button:hover {
   background-color: #292D32;
-}/*# sourceMappingURL=Topbar.css.map */
+}/*# sourceMappingURL=topbar.css.map */
