--- a/css/index.css
+++ b/css/index.css
@@ -338,6 +338,24 @@
   width: 100%;
   height: auto;
 }
+.DetailBody .CategorySection .CategorySelect .SelectBox {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  white-space: nowrap;
+  width: auto;
+  padding: 20px 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  background-color: #655D53;
+  border-radius: 10px;
+  border: 1px solid white;
+}
+.DetailBody .CategorySection .CategorySelect .SelectBox:hover {
+  color: aquamarine;
+}
 .DetailBody .CategorySection .CategorySelect .CategoryBox {
   display: flex;
   position: relative;
@@ -352,6 +370,9 @@
   background-color: #1e1e1e;
   border-radius: 10px;
   border: 1px solid white;
+}
+.DetailBody .CategorySection .CategorySelect .CategoryBox:hover {
+  color: aquamarine;
 }
 
 .MapBox {
