--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@
 @import "./styles/components/ads/adsModal/detail.scss";
 @import "./styles/components/ads/adsModal/addAdsStep.scss";
 @import "./styles/components/ads/adsModal/videoInfo.scss";
-
+@import "./styles/components/ads/adsModal/setCone.scss";
 //cone
 @import "./styles/components/cone/coneMap.scss";
 @import "./styles/components/cone/coneShop.scss";
