--- a/src/styles/components/cone/coneShop.scss
+++ b/src/styles/components/cone/coneShop.scss
@@ -85,6 +85,7 @@
                     .Example {
                         font-size: 1.5rem;
                     }
+                    
                     .Example_Map {
                         width: 100%;
                         height: 100%;
@@ -93,15 +94,76 @@
                 }
 
                 .ConeShop_body_Right{
-                    display: flex;
+                    display: block;
                     flex-direction: column;
                     justify-content: space-between;
                     width: 18%;
                     min-width: 200px;
                     height: 100%;
                     padding-left: 2%;
-                    .Cone_List{
-                        font-size: 1.5rem;
+                    overflow-y: initial !important;
+                    overflow: hidden;
+                    
+                    .SelectConeSection{
+                        display: flex;
+                        position: absolute;
+                        justify-content: space-between;
+                        left:650px;
+                        top:220px;
+                        width: auto;
+                        height: auto;
+                        flex-direction: column;
+                        background-color: rgba(0, 0, 0, 0.7);
+                        border-radius: 10px;
+                        z-index: 100;
+                        
+                        overflow-y: auto;
+                        .ConeListBox{
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            border-radius: 10px;
+                            width: 60px;
+                            height: 30px;
+                            margin: 10px 10px;
+                            
+                        }
+                    }
+                    .ConeListSection{
+                        .Cone_List{
+                            font-size: 1.5rem;
+                        }
+                        .SelectedCone{
+                            display: flex;
+                            flex-direction: column;
+                            width: 100%;
+                            height: 80px;
+                            background-color: #1E1E1E;
+                            border-radius: 10px;
+                            margin: 20px 0;
+                            .ConeDistance {
+                                margin-left: 10px;
+                                padding: 10px 0;
+                            }
+                            .ConeCountandPrice {
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: space-between;
+                                .Count {
+                                    display: flex;
+                                    align-items: flex-end;
+                                    font-size: 0.7rem;
+                                    margin-left: 10px;
+                                    padding: 10px 0;
+                                }
+                                .Price {
+                                    font-size: 0.9rem;
+                                    margin-right: 10px;
+                                    padding: 10px 0;
+                                }
+                            }
+                        }
                     }
                     .Payment_Section{
                         display: flex;
@@ -113,11 +175,61 @@
                         .PaymentBox{
                             border-radius: 1rem;
                             width: 100%;
-                            height: 100px;
+                            height: auto;
                             background-color: #1E1E1E;
-                            
+                            .TotalCount {
+                                padding-top: 20px;
+                                margin-left: 10px;
+                                font-size: 0.9rem;
+                            }
+                            .TotalPrice {
+                                padding-bottom: 20px;
+                                margin-left: 10px;
+                                font-size: 0.9rem;
+                            }
+                            .PayButton {
+                                
+                                display: flex;
+                                position: relative;
+                                justify-content: center;
+                                align-items: center;
+                                width: 100%;
+                                height: auto;
+                                text-decoration: none;
+                                color:white;
+                                border: 0;
+                                border-radius: 5px;
+                                overflow: hidden;
+                                box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
+                                padding: 5px 0;
+                                z-index: 0;
+                                .fill-one {
+                                    position: absolute;
+                                    background-image: linear-gradient(to right, #E040FB, #00BCD4);
+                                    height: 70px;
+                                    width: 500px;
+                                    border-radius: 5px;
+                                    margin: -40px 0 0 -200px;
+                                    z-index: -1;
+                                    transition: all 0.4s ease;
+                                }
+                                &:hover .fill-one{
+                                    -webkit-transform: translateX(100px);
+                                    -moz-transform: translateX(100px);
+                                    transform: translateX(100px);
+                                }                                
+                            }
                         }
                     }
+                }
+                .ConeShop_body_Right::-webkit-scrollbar{
+                        width: 5px;
+                        height: 10px;
+                        background-color: none;
+                }
+                .ConeShop_body_Right::-webkit-scrollbar-thumb{
+                    background-color: white;
+                    border-radius: 5px;
                 }
             }
         }
