--- a/src/styles/components/css/coneShop.css
+++ b/src/styles/components/css/coneShop.css
@@ -94,8 +94,6 @@
   min-width: 200px;
   height: 100%;
   padding-left: 2%;
-  overflow-y: initial !important;
-  overflow: hidden;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .SelectConeSection {
   display: flex;
@@ -121,6 +119,12 @@
   height: 30px;
   margin: 10px 10px;
 }
+.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection {
+  height: 75%;
+  overflow: hidden;
+  overflow-y: initial !important;
+  overflow: hidden;
+}
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .Cone_List {
   font-size: 1.5rem;
 }
@@ -131,6 +135,7 @@
   height: 80px;
   background-color: #1E1E1E;
   border-radius: 10px;
+  padding: 5px 0;
   margin: 20px 0;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .SelectedCone .ConeDistance {
@@ -141,21 +146,47 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
-.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .SelectedCone .ConeCountandPrice .Count {
+.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .SelectedCone .ConeCountandPrice .Remove {
   display: flex;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   font-size: 0.7rem;
-  margin-left: 10px;
-  padding: 10px 0;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  width: 80px;
+  height: 30px;
+  border-radius: 10px;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+}
+.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .SelectedCone .ConeCountandPrice .Remove:hover {
+  background-position: right center;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection .SelectedCone .ConeCountandPrice .Price {
   font-size: 0.9rem;
   margin-right: 10px;
   padding: 10px 0;
+  margin-bottom: 5px;
+}
+.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+  background-color: none;
+}
+.Container .Background .Modal .Modal_body .ConeShop_body_Right .ConeListSection::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 5px;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .Payment_Section {
   display: flex;
+  position: relative;
   flex-direction: column;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .Payment_Section .Payment {
@@ -164,7 +195,7 @@
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .Payment_Section .PaymentBox {
   border-radius: 1rem;
-  width: 100%;
+  width: 200px;
   height: auto;
   background-color: #1E1E1E;
 }
@@ -174,7 +205,7 @@
   font-size: 0.9rem;
 }
 .Container .Background .Modal .Modal_body .ConeShop_body_Right .Payment_Section .PaymentBox .TotalPrice {
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   margin-left: 10px;
   font-size: 0.9rem;
 }
@@ -189,8 +220,9 @@
   color: white;
   border: 0;
   border-radius: 5px;
+  margin-bottom: 5px;
   overflow: hidden;
-  box-shadow: 0 4px 12px 0 rgb(152, 160, 180);
+  box-shadow: 0 2px 8px 0 rgb(152, 160, 180);
   padding: 5px 0;
   z-index: 0;
 }
@@ -208,13 +240,4 @@
   -webkit-transform: translateX(100px);
   -moz-transform: translateX(100px);
   transform: translateX(100px);
-}
-.Container .Background .Modal .Modal_body .ConeShop_body_Right::-webkit-scrollbar {
-  width: 5px;
-  height: 10px;
-  background-color: none;
-}
-.Container .Background .Modal .Modal_body .ConeShop_body_Right::-webkit-scrollbar-thumb {
-  background-color: white;
-  border-radius: 5px;
 }/*# sourceMappingURL=coneShop.css.map */
