--- a/src/styles/components/ads/adsModal/adsUpload.scss
+++ b/src/styles/components/ads/adsModal/adsUpload.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 55%;
+    height: 70%;
     font-size: 1.5rem;
     z-index: 0;
     
@@ -18,20 +18,41 @@
         border-radius: 100%;
         z-index: 200;
         background-color: #1e1e1e;
+        margin-bottom: 100px;
         .UploadIcon {
             width: 150px;
             height: 150px;
             margin-bottom: 10px;
         }
+        &-dragging {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            border-radius: 100%;
+            z-index: 200;
+            background-color: #1e1e1e;
+            margin-bottom: 100px;
+            border: 2px solid white;
+            transition: 0.12s ease-in;
+            cursor: pointer;
+            .UploadIcon {
+                width: 150px;
+                height: 150px;
+                margin-bottom: 10px;
+            }
+        }
     }
-}
-
-.File_Upload_Text{
-    margin-Top: 50px;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 2rem;
+    .File_Upload_Text{
+        
+        display: flex;
+        position: relative;
+        align-items: flex-end;
+        justify-content: flex-end;
+        text-align: center;
+        font-size: 2rem;
+    }
+    
 }
