--- a/src/styles/components/ads/css/AdsUpload.css
+++ b/src/styles/components/ads/css/AdsUpload.css
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 55%;
+  height: 70%;
   font-size: 1.5rem;
   z-index: 0;
 }
@@ -18,19 +18,30 @@
   border-radius: 100%;
   z-index: 200;
   background-color: #1e1e1e;
+  margin-bottom: 100px;
 }
 .File_Upload_body .Circle .UploadIcon {
   width: 150px;
   height: 150px;
   margin-bottom: 10px;
 }
-
-.File_Upload_Text {
-  margin-Top: 50px;
+.File_Upload_body .File_Upload_Text {
   display: flex;
   position: relative;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
   text-align: center;
   font-size: 2rem;
-}/*# sourceMappingURL=adsUpload.css.map */
+}
+.File_Upload_body .File_Upload_body_dragging {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 70%;
+  font-size: 1.5rem;
+  z-index: 0;
+  border: 2px solid black;
+  border-radius: 10px;
+}/*# sourceMappingURL=AdsUpload.css.map */
