--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @import "./styles/components/ads/adsModal/addAdsStep.scss";
 @import "./styles/components/ads/adsModal/videoInfo.scss";
 @import "./styles/components/ads/adsModal/setCone.scss";
+@import "./styles/components/ads/adsModal/adsInfoCheck.scss";
 //cone
 @import "./styles/components/cone/coneMap.scss";
 @import "./styles/components/cone/coneShop.scss";
