--- a/src/styles/components/ads/adsModal/adsUpload.scss
+++ b/src/styles/components/ads/adsModal/adsUpload.scss
@@ -19,6 +19,10 @@
         z-index: 200;
         background-color: #1e1e1e;
         margin-bottom: 100px;
+        &:hover {
+            border: 2px solid white;
+            transition: 0.12s ease-in;
+        }
         .UploadIcon {
             width: 150px;
             height: 150px;
