--- a/src/styles/components/ads/adsModal/detail.scss
+++ b/src/styles/components/ads/adsModal/detail.scss
@@ -58,10 +58,25 @@
                     width: 28%;
                     margin-left: 2%;
                     .AdsViewBox {
-                        width: 100%;
-                        height: 200px;
+                        display: flex;
+                        flex-direction: column;
+                        width: fit-content;
+                        height: auto;
+                        justify-content: center;
+                        align-items: center;
                         border-radius: 10px;
                         background-color: #1e1e1e;
+                        .Preview-text{
+                            padding: 10px 0;
+                        }
+                        .Preview{
+                            display: flex;
+                            justify-content: center;
+                            
+                            width: 98%;
+                            padding: 5px 0;
+                            border-radius: 12px;
+                        }
                     }
                 }
             }
