--- a/src/styles/components/ads/css/AdsUpload.css
+++ b/src/styles/components/ads/css/AdsUpload.css
@@ -20,7 +20,31 @@
   background-color: #1e1e1e;
   margin-bottom: 100px;
 }
+.File_Upload_body .Circle:hover {
+  border: 2px solid white;
+  transition: 0.12s ease-in;
+}
 .File_Upload_body .Circle .UploadIcon {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10px;
+}
+.File_Upload_body .Circle-dragging {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  z-index: 200;
+  background-color: #1e1e1e;
+  margin-bottom: 100px;
+  border: 2px solid white;
+  transition: 0.12s ease-in;
+  cursor: pointer;
+}
+.File_Upload_body .Circle-dragging .UploadIcon {
   width: 150px;
   height: 150px;
   margin-bottom: 10px;
@@ -32,16 +56,4 @@
   justify-content: flex-end;
   text-align: center;
   font-size: 2rem;
-}
-.File_Upload_body .File_Upload_body_dragging {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 70%;
-  font-size: 1.5rem;
-  z-index: 0;
-  border: 2px solid black;
-  border-radius: 10px;
 }/*# sourceMappingURL=AdsUpload.css.map */
