--- a/src/styles/components/ads/css/detail.css
+++ b/src/styles/components/ads/css/detail.css
@@ -55,10 +55,24 @@
   margin-left: 2%;
 }
 .Container .Background .Modal .AddAds_Modal_body .AdsViewSection .AdsViewBox {
-  width: 100%;
-  height: 200px;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  height: auto;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px;
   background-color: #1e1e1e;
+}
+.Container .Background .Modal .AddAds_Modal_body .AdsViewSection .AdsViewBox .Preview-text {
+  padding: 10px 0;
+}
+.Container .Background .Modal .AddAds_Modal_body .AdsViewSection .AdsViewBox .Preview {
+  display: flex;
+  justify-content: center;
+  width: 98%;
+  padding: 5px 0;
+  border-radius: 12px;
 }
 .Container .Background .Modal .ButtonPosition {
   display: flex;
