--- a/src/styles/css/dashBoard.css
+++ b/src/styles/css/dashBoard.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 .main .AnalyticsPart {
   display: flex;
@@ -15,10 +16,15 @@
   display: flex;
   flex-direction: column;
   width: 45%;
+  min-width: 500px;
   margin-top: 100px;
   margin-left: 5%;
+  margin-right: 50px;
 }
-.main .Cone_title {
+.main .ConePart .Cone_title {
   font-size: 2rem;
   margin-bottom: 1rem;
+}
+.main .ConePart .ConeMap {
+  width: 95%;
 }/*# sourceMappingURL=dashBoard.css.map */
