--- a/src/styles/pages/dashBoard.scss
+++ b/src/styles/pages/dashBoard.scss
@@ -3,26 +3,30 @@
     width: 100%;
     height: 100vh;
     flex-direction: row;
+    justify-content: space-evenly;
+    .AnalyticsPart {
+        display: flex;
+        margin-left:100px;
+        margin-top: 100px;
+        width: 50%;
+        flex-direction: column;
+    }
 
+    .ConePart {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        min-width: 500px;
+        margin-top: 100px;
+        margin-left:5%;
+        margin-right: 50px;
+        .Cone_title {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        .ConeMap {
+            width: 95%;
+        }
+    }
 
-.AnalyticsPart {
-    display: flex;
-    margin-left:100px;
-    margin-top: 100px;
-    width: 50%;
-    flex-direction: column;
-}
-
-.ConePart {
-    display: flex;
-    flex-direction: column;
-    width: 45%;
-    margin-top: 100px;
-    margin-left:5%;
-}
-
-.Cone_title {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
 }
