--- a/src/styles/components/ads/css/AdsUpload.css
+++ b/src/styles/components/ads/css/AdsUpload.css
@@ -56,4 +56,31 @@
   justify-content: flex-end;
   text-align: center;
   font-size: 2rem;
+}
+
+.loading {
+  display: flex;
+  position: absolute;
+  justify-content: flex-end;
+  align-items: center;
+  top: 400px;
+  left: 450px;
+  box-sizing: border-box;
+  margin-bottom: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 8px solid transparent;
+  border-top-color: #f19022;
+  border-bottom-color: #f19022;
+  animation: loading 0.8s ease infinite;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }/*# sourceMappingURL=AdsUpload.css.map */
