--- a/src/styles/pages/Navi/topbar.scss
+++ b/src/styles/pages/Navi/topbar.scss
@@ -38,21 +38,39 @@
         right:0;
         margin-right: 3rem;
         flex-direction: row;
-    }
-
-    .Button {
-        display: flex;
         align-items: center;
-        justify-content: center;
-        width: auto;
-        height: 46px;
-        padding: 0 0.5rem;
-        border-radius: 2rem;
-        margin-right: 0.5rem;
-        background-color: black;
-        &:hover {
-            background-color: #292D32;
+        .Button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: auto;
+            height: 46px;
+            padding: 0 0.5rem;
+            border-radius: 2rem;
+            margin-right: 0.5rem;
+            background-color: black;
+            &:hover {
+                background-color: #292D32;
+            }
         }
+        .ConnectWallet {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 15px;
+            width: 180px;
+            height: 36px;
+            border: none;
+            background-color:#292D32;
+            font-size: 0.8rem;
+            color: white;
+            transition: all 0.5s;
+            &:hover {
+                background-color: #4169E1;
+                transform: scale(1.05);
+            }
+        } 
     }
+    
 
 }
