--- a/src/styles/components/ads/adsModal/setCone.scss
+++ b/src/styles/components/ads/adsModal/setCone.scss
@@ -9,7 +9,7 @@
         justify-content: center;
         width: 93%;
         height: 68%;
-    
+        z-index: 0;
     }
     .BalanceSection{
         display: flex;
@@ -19,6 +19,7 @@
         position: absolute;
         width: auto;
         height: auto;
+        z-index: 10;
         border-radius: 10px;
         background-color: rgba(0, 0, 0, 0.7);
         .BalanceBox {
